--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,12 @@
  */
 
 plugins {
+	// https://goo.gl/eCAcdq 
+    id "me.champeau.gradle.jmh" version "0.4.5"
+    
+    // https://goo.gl/YyN2YW
+    id "io.morethan.jmhreport" version "0.7.0"
+    
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
 }
@@ -27,4 +33,17 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+}
+
+jmh {
+    jmhVersion = '1.20' // Specifies JMH version
+    jvmArgs = ['-Xmx2G', '-Xms2G']
+    include = ['.*JmhBenchmark']
+    resultsFile = project.file("${project.buildDir}/reports/jmh/results.json") // results file
+    resultFormat = 'JSON' // Result format type (one of CSV, JSON, NONE, SCSV, TEXT)
+    failOnError = true
+    forceGC = true
+    fork = 1
+    iterations = 5
+    warmupIterations = 5
 }
